--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Una giornata al museo</title>
 </head>
 <body>
+    <header>
+        <h1>Una giornata al museo</h1>
+    </header>
+    
     
 </body>
 </html>
