add a section "scultura
add a section for the ancient sculture

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li>
                     <h2>Il dipinto che mi ha colpito di più</h2> 
                     <figure> 
-                        <img src="./img/quadro.png" title="Bel Dipinto" alt="Bellissimo dipinto">
+                        <img src="./img/quadro.png" title="Bel Dipinto" alt="Bellissimo galleria centrale">
                         <figcaption>Un'opera d'arte affascinante vista nella galleria principale</figcaption> 
                     </figure> 
                     <p>Questo dipinto mi ha catturato per i suoi colori intensi e l'espressione del voltodel personaggio raffigurato. 
@@ -25,9 +25,16 @@
                     </p>
                 </li>
 
-                
+                <li>
+                    <h2>Un'antica scultura</h2>
+                    <figure>
+                        <img src="./img/scultura.png" title="Scultura guerriero romano" alt="sculura antica">
+                        <figcaption>Scultura romana in marmo esposta nella sala archiologica</figcaption>
+                    </figure>
+                    <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano.
+                        I dettagli del viso e dell'armatura erano incredibilmente realistici
+                    </p>
             </ol>
-
     </main>
 
     
