--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         </ul>
     </main>
 
+    <footer>
+        <p>&copy; 2025 Insegnante di html<br> che la forza sia con te</p>
+    </footer>
+
     
 </body>
 </html>
