Add grammatical corrections

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <li>
                 <h2>Il dipinto che mi ha colpito di più</h2> 
                 <figure> 
-                    <img src="./img/quadro.png" title="Bel Dipinto" alt="Bellissimo galleria centrale">
+                    <img src="./img/quadro.png" title="Bel Dipinto" alt="Bellissimo dipinto galleria centrale">
                     <figcaption>Un'opera d'arte affascinante vista nella galleria principale</figcaption> 
                 </figure> 
-                <p>Questo dipinto mi ha catturato per i suoi colori intensi e l'espressione del voltodel personaggio raffigurato. 
+                <p>Questo dipinto mi ha catturato per i suoi colori intensi e l'espressione del volto del personaggio raffigurato. 
                     È come se raccontasse una storia senza parole.
                 </p>
             </li>
@@ -35,7 +35,7 @@
                 </p>
         </ol>
 
-        <h3>Le cose che ho imparato oggi</h3>
+        <h3>Le cose che ho imparato oggi :</h3>
         <ul>
             <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
             <li>Molti dipinti nascondono simboli e significati nascosti</li>
